src/main/k8s/pdf-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdf-app
  labels:
    app: pdf-app
spec:
  replicas: 1
  minReadySeconds: 10
  selector:
    matchLabels:
      app: pdf-app
  template:
    metadata:
      labels:
        app: pdf-app
    spec:
      containers:
        - name: pdf-app
          image: localhost:5000/pdf-ebook-converter:0.0.15-SNAPSHOT
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 240
            periodSeconds: 5
          resources:
            requests:
              memory: 300Mi
              cpu: 300m
            limits:
              memory: 400Mi
              cpu: 500m
          # set environment variables from the configMap (variant 1)
          volumeMounts:
            - name: pdf-app-cm-management-profile
              mountPath: /usr/local/apps/configuration/profiles/management
              readOnly: true
      # mount files with application-*.properties from the configMap (variant 3) and use them in the application (profile "management")
      volumes:
        - name: pdf-app-cm-management-profile
          configMap:
            name: pdf-app-cm-management-profile
            items:
              - key: application-management.properties
                path: application-management.properties
