src/main/k8s/pdf-postgresql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdf-postgresql
  labels:
    app: pdf-postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pdf-postgresql
  template:
    metadata:
      labels:
        app: pdf-postgresql
    spec:
      containers:
        - name: pdf-postgresql
          image: postgres:17.5-alpine3.22
          ports:
            - containerPort: 5432
          # volumeMounts are used to mount the persistent storage inside the container
          volumeMounts:
            - name: pdf-postgresql-storage
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U "$DATASOURCE_USERNAME" -d "$DATASOURCE_DATABASE"
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 1
            successThreshold: 1
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U "$DATASOURCE_USERNAME" -d "$DATASOURCE_DATABASE"
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 4
            failureThreshold: 2
            successThreshold: 1
          resources:
            requests:
              memory: 150Mi
              cpu: 100m
            limits:
              memory: 150Mi
              cpu: 100m
      # volumes is used to define which kind of the storage will be used, the name must match the one defined in the volumeMounts
      volumes:
        - name: pdf-postgresql-storage
          persistentVolumeClaim:
            claimName: pdf-postgresql-pvc
