src/main/k8s/pdf-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdf-app-svc
spec:
  type: ClusterIP
  selector:
    app: pdf-app
  ports:
    - name: pdf-app
      port: 8080
      targetPort: 8080
