src/main/k8s/ingress-secure.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdf-ingress-secure
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: "ingress-credentials"
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: pdf-app-svc
                port:
                  number: 8080
    # the same host only, for example - using different hosts
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: /actuator/health/liveness
            backend:
              service:
                name: pdf-app-svc
                port:
                  number: 8080
